[tool.poetry]
name = "modcmac"
version = "0.1.0"
description = "MODCMAC Algorithm for Bridges and Quay Walls Maintenance"
authors = [
    "Remmerden, Jesse van <j.v.remmerden@tue.nl>",
    "Calleris, Enrico <e.calleris@amsterdam.nl>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
gymnasium = "^0.29.1"
numpy = "^1.26.4"
pandas = "^2.2.1"
torch = "^2.2.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
flake8 = "^7.0.0"
isort = "^5.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
